[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/SkinsMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/VirusPreview.tscn" type="PackedScene" id=7]

[node name="SkinsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.458824, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 1048.0
rect_min_size = Vector2( 200, 0 )

[node name="SkinList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 1004.0
margin_right = 200.0
margin_bottom = 1048.0
text = "Back"

[node name="VirusPreview" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 232.0
margin_right = 1656.0
margin_bottom = 1048.0
size_flags_horizontal = 3

[node name="AccessoiresList" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1688.0
margin_right = 1888.0
margin_bottom = 1048.0
rect_min_size = Vector2( 200, 0 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
